--- a/README
+++ b/README
@@ -1,49 +1,6 @@
-This is your new Play application
+Tutorial: Web Application using Java + Play Framework
 =================================
 
-This file will be packaged with your application when using `activator dist`.
+_October, 2016_
 
-There are several demonstration files available in this template.
-
-Controllers
-===========
-
-- HomeController.java:
-
-  Shows how to handle simple HTTP requests.
-
-- AsyncController.java:
-
-  Shows how to do asynchronous programming when handling a request.
-
-- CountController.java:
-
-  Shows how to inject a component into a controller and use the component when
-  handling requests.
-
-Components
-==========
-
-- Module.java:
-
-  Shows how to use Guice to bind all the components needed by your application.
-
-- Counter.java:
-
-  An example of a component that contains state, in this case a simple counter.
-
-- ApplicationTimer.java:
-
-  An example of a component that starts when the application starts and stops
-  when the application stops.
-
-Filters
-=======
-
-- Filters.java:
-
-  Creates the list of HTTP filters used by your application.
-
-- ExampleFilter.java
-
-  A simple filter that adds a header to every response.
+I put together some videos on how to create a simple web application using Java 8 + Play Framework 2.5.x. You can find the series of videos collected at [http://code.scottshipp.com/tutorial-web-application-using-java-play-framework/](http://code.scottshipp.com/tutorial-web-application-using-java-play-framework/). This repo is the accompanying code, so that you can compare what you come out with against this running version.
